Add Data Access Layer

--- a/src/TicketManagement.BusinessLogic/TicketManagement.BusinessLogic.csproj
+++ b/src/TicketManagement.BusinessLogic/TicketManagement.BusinessLogic.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TicketManagement.DataAccess\TicketManagement.DataAccess.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Update="SonarAnalyzer.CSharp" Version="8.33.0.40503">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>none</IncludeAssets>
