--- a/src/TicketManagement.DataAccess/TicketManagement.DataAccess.csproj
+++ b/src/TicketManagement.DataAccess/TicketManagement.DataAccess.csproj
@@ -5,6 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ADO\DatabaseContextFactory.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="ADO\DatabaseContextFactory.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Update="SonarAnalyzer.CSharp" Version="8.33.0.40503">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>none</IncludeAssets>
