Changed access modificator for DAL

--- a/src/TicketManagement.DataAccess/TicketManagement.DataAccess.csproj
+++ b/src/TicketManagement.DataAccess/TicketManagement.DataAccess.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <AssemblyName>$(MSBuildProjectName)</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,20 +22,20 @@
   </ItemGroup>
   
   <ItemGroup>
-    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-      <_Parameter1>$(MSBuildProjectName).BusinessLogic</_Parameter1>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+      <_Parameter1>$(MSBuildProjectName.Trim("DataAccess"))BusinessLogic</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
   
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-      <_Parameter1>$(MSBuildProjectName).BusinessLogic.UnitTests</_Parameter1>
+      <_Parameter1>$(MSBuildProjectName.Trim("DataAccess"))BusinessLogic.UnitTests</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
   
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-      <_Parameter1>$(MSBuildProjectName).DataAccess.IntegrationTests</_Parameter1>
+      <_Parameter1>$(MSBuildProjectName).IntegrationTests</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
   
