--- a/src/TicketManagement.BusinessLogic/TicketManagement.BusinessLogic.csproj
+++ b/src/TicketManagement.BusinessLogic/TicketManagement.BusinessLogic.csproj
@@ -16,4 +16,15 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>$(MSBuildProjectName).UnitTests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>$(MSBuildProjectName.Trim("BusinessLogic"))DataAccess.IntegrationTests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 </Project>
