--- a/src/TicketManagement.BusinessLogic/TicketManagement.BusinessLogic.csproj
+++ b/src/TicketManagement.BusinessLogic/TicketManagement.BusinessLogic.csproj
@@ -18,6 +18,12 @@
 
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>"DynamicProxyGenAssembly2"</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
       <_Parameter1>$(MSBuildProjectName).UnitTests</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
