--- a/test/TicketManagement.IntegrationTests/testhost.dll.config
+++ b/test/TicketManagement.IntegrationTests/testhost.dll.config
@@ -2,7 +2,13 @@
 <configuration>
   <connectionStrings>  
      <add name="DefaultConnection"
-          connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=TicketManagement.Database;Integrated Security=True"
+          connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=TestTicketManagement.Database;Integrated Security=True"
           providerName="System.Data.SqlClient"/>
+    <add name="TestConnection"
+         connectionString="Data Source=localhost\SQLEXPRESS;Integrated Security=True"
+         providerName="System.Data.SqlClient"/>
+    <add name="BackupConnection"
+         connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=TestTicketManagement.Database;Integrated Security=True"
+         providerName="System.Data.SqlClient"/>
   </connectionStrings>  
 </configuration>
