--- a/test/TicketManagement.IntegrationTests/TicketManagement.DataAccess.IntegrationTests.csproj
+++ b/test/TicketManagement.IntegrationTests/TicketManagement.DataAccess.IntegrationTests.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\TicketManagement.BusinessLogic\TicketManagement.BusinessLogic.csproj" />
     <ProjectReference Include="..\..\src\TicketManagement.DataAccess\TicketManagement.DataAccess.csproj" />
   </ItemGroup>
 
