--- a/test/TicketManagement.IntegrationTests/testhost.dll.config
+++ b/test/TicketManagement.IntegrationTests/testhost.dll.config
@@ -3,12 +3,12 @@
   <connectionStrings>  
      <add name="DefaultConnection"
           connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=TestTicketManagement.Database;Integrated Security=True"
-          providerName="System.Data.SqlClient"/>
+          providerName="Microsoft.Data.SqlClient"/>
     <add name="TestConnection"
          connectionString="Data Source=localhost\SQLEXPRESS;Integrated Security=True"
-         providerName="System.Data.SqlClient"/>
+         providerName="Microsoft.Data.SqlClient"/>
     <add name="BackupConnection"
          connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=TestTicketManagement.Database;Integrated Security=True"
-         providerName="System.Data.SqlClient"/>
+         providerName="Microsoft.Data.SqlClient"/>
   </connectionStrings>  
 </configuration>
