--- a/src/TicketManagement.BusinessLogic/TicketManagement.BusinessLogic.csproj
+++ b/src/TicketManagement.BusinessLogic/TicketManagement.BusinessLogic.csproj
@@ -31,7 +31,7 @@
 
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-      <_Parameter1>$(MSBuildProjectName.Trim("BusinessLogic"))DataAccess.IntegrationTests</_Parameter1>
+      <_Parameter1>$(MSBuildProjectName.Trim("BusinessLogic"))IntegrationTests</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
 </Project>
