--- a/src/TicketManagement.DataAccess/TicketManagement.DataAccess.csproj
+++ b/src/TicketManagement.DataAccess/TicketManagement.DataAccess.csproj
@@ -6,19 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="ADO\DatabaseContext.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.6">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -52,12 +43,8 @@
   
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-      <_Parameter1>$(MSBuildProjectName).IntegrationTests</_Parameter1>
+      <_Parameter1>$(MSBuildProjectName.Trim("DataAccess"))IntegrationTests</_Parameter1>
     </AssemblyAttribute>
-  </ItemGroup>
-  
-  <ItemGroup>
-    <None Include="ADO\DatabaseContext.cs" />
   </ItemGroup>
   
 </Project>
