--- a/test/TicketManagement.IntegrationTests/TicketManagement.IntegrationTests.csproj
+++ b/test/TicketManagement.IntegrationTests/TicketManagement.IntegrationTests.csproj
@@ -16,6 +16,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\TicketManagement.BusinessLogic\TicketManagement.BusinessLogic.csproj" />
     <ProjectReference Include="..\..\src\TicketManagement.DataAccess\TicketManagement.DataAccess.csproj" />
+    <ProjectReference Include="..\..\src\TicketManagement.DI\TicketManagement.DI.csproj" />
+    <ProjectReference Include="..\..\src\TicketManagement.Settings\TicketManagement.Settings.csproj" />
   </ItemGroup>
 
   <ItemGroup>
