--- a/src/TicketManagement.DataAccess/TicketManagement.DataAccess.csproj
+++ b/src/TicketManagement.DataAccess/TicketManagement.DataAccess.csproj
@@ -9,11 +9,6 @@
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\TicketManagement.Common\TicketManagement.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,23 +23,15 @@
       <_Parameter1>"DynamicProxyGenAssembly2"</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
-  
+
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
-      <_Parameter1>$(MSBuildProjectName.Trim("DataAccess"))BusinessLogic</_Parameter1>
+      <_Parameter1>$(MSBuildProjectName.Trim("DataAccess"))Settings</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
   
   <ItemGroup>
-    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-      <_Parameter1>$(MSBuildProjectName.Trim("DataAccess"))BusinessLogic.UnitTests</_Parameter1>
-    </AssemblyAttribute>
-  </ItemGroup>
-  
-  <ItemGroup>
-    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-      <_Parameter1>$(MSBuildProjectName.Trim("DataAccess"))IntegrationTests</_Parameter1>
-    </AssemblyAttribute>
+    <ProjectReference Include="..\TicketManagement.DI\TicketManagement.DI.csproj" />
   </ItemGroup>
   
 </Project>
