Deleted TM.Settings project and trash folders, modify TestDataBase for Tests

--- a/src/TicketManagement.DataAccess/TicketManagement.DataAccess.csproj
+++ b/src/TicketManagement.DataAccess/TicketManagement.DataAccess.csproj
@@ -31,14 +31,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
-      <_Parameter1>$(MSBuildProjectName.Trim("DataAccess"))Settings</_Parameter1>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>$(MSBuildProjectName.Trim("DataAccess"))BusinessLogic.UnitTests</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
 
   <ItemGroup>
-    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-      <_Parameter1>$(MSBuildProjectName.Trim("DataAccess"))BusinessLogic.UnitTests</_Parameter1>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+      <_Parameter1>$(MSBuildProjectName.Trim("DataAccess"))IntegrationTests</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
 
