--- a/src/TicketManagement.BusinessLogic/TicketManagement.BusinessLogic.csproj
+++ b/src/TicketManagement.BusinessLogic/TicketManagement.BusinessLogic.csproj
@@ -32,7 +32,7 @@
 
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-      <_Parameter1>$(MSBuildProjectName.Trim("BusinessLogic"))Settings</_Parameter1>
+      <_Parameter1>$(MSBuildProjectName.Trim("BusinessLogic"))IntegrationTests</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
 
