Fixes MVC.csproj

--- a/src/TicketManagement.MVC/TicketManagement.MVC.csproj
+++ b/src/TicketManagement.MVC/TicketManagement.MVC.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <InternalsVisibleTo Include="$(MSBuildProjectName.Trim('MVC'))IntegrationTests" />
+    <InternalsVisibleTo Include="TicketManagement.IntegrationTests" />
   </ItemGroup>
 
   <ItemGroup>
