--- a/src/TicketManagement.MVC/appsettings.json
+++ b/src/TicketManagement.MVC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "buildOptions": {
+    "emitEntryPoint": true
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=TicketManagement.Database;Integrated Security=True"
   },
