--- a/src/ThirdPartyEventEditor/ThirdPartyEventEditor/Web.config
+++ b/src/ThirdPartyEventEditor/ThirdPartyEventEditor/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -15,6 +18,27 @@
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
   </system.web>
+
+  <log4net>
+    <root>
+      <level value="ALL"/>
+      <appender-ref ref="file"/>
+    </root>
+    <appender name="file" type="log4net.Appender.RollingFileAppender">
+      <encoding value="utf-8"/>
+      <file value="App_Data\LOG_"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Date"/>
+      <maxSizeRollBackups value="5"/>
+      <maximumFileSize value="15MB"/>
+      <staticLogFileName value="false"/>
+      <datePattern value="yyyy-MM-dd'.log'"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %level %logger - %message%newline"/>
+      </layout>
+    </appender>
+  </log4net>
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
