--- a/src/TicketManagement.Common/TicketManagement.Common.csproj
+++ b/src/TicketManagement.Common/TicketManagement.Common.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="..\ThirdPartyEventEditor\ThirdPartyEventEditor\Models\ThirdPartyEvent.cs" Link="Entities\ThirdPartyEvent.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
