--- a/src/ThirdPartyEventEditor/ThirdPartyEventEditor/Web.config
+++ b/src/ThirdPartyEventEditor/ThirdPartyEventEditor/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -21,20 +21,20 @@
 
   <log4net>
     <root>
-      <level value="ALL"/>
-      <appender-ref ref="file"/>
+      <level value="ALL" />
+      <appender-ref ref="file" />
     </root>
     <appender name="file" type="log4net.Appender.RollingFileAppender">
-      <encoding value="utf-8"/>
-      <file value="App_Data\LOG_"/>
-      <appendToFile value="true"/>
-      <rollingStyle value="Date"/>
-      <maxSizeRollBackups value="5"/>
-      <maximumFileSize value="15MB"/>
-      <staticLogFileName value="false"/>
-      <datePattern value="yyyy-MM-dd'.log'"/>
+      <encoding value="utf-8" />
+      <file value="App_Data\LOG_" />
+      <appendToFile value="true" />
+      <rollingStyle value="Date" />
+      <maxSizeRollBackups value="5" />
+      <maximumFileSize value="15MB" />
+      <staticLogFileName value="false" />
+      <datePattern value="yyyy-MM-dd'.log'" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %level %logger - %message%newline"/>
+        <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
       </layout>
     </appender>
   </log4net>
@@ -76,6 +76,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
