--- a/src/ThirdPartyEventEditor/ThirdPartyEventEditor/packages.config
+++ b/src/ThirdPartyEventEditor/ThirdPartyEventEditor/packages.config
@@ -15,6 +15,9 @@
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="SimpleInjector" version="5.0.0" targetFramework="net48" />
+  <package id="SimpleInjector.Integration.Web" version="5.0.0" targetFramework="net48" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="5.0.0" targetFramework="net48" />
   <package id="SonarAnalyzer.CSharp" version="8.42.0.51121" targetFramework="net48" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net48" developmentDependency="true" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
