--- a/src/ThirdPartyEventEditor/ThirdPartyEventEditor/ThirdPartyEventEditor.csproj
+++ b/src/ThirdPartyEventEditor/ThirdPartyEventEditor/ThirdPartyEventEditor.csproj
@@ -248,6 +248,14 @@
     <Analyzer Include="..\packages\SonarAnalyzer.CSharp.8.42.0.51121\analyzers\SonarAnalyzer.dll" />
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="SimpleInjector">
+      <Version>5.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="SimpleInjector.Integration.Web.Mvc">
+      <Version>5.0.0</Version>
+    </PackageReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
