--- a/src/ThirdPartyEventEditor/ThirdPartyEventEditor/Web.config
+++ b/src/ThirdPartyEventEditor/ThirdPartyEventEditor/Web.config
@@ -15,8 +15,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <customErrors mode="On">
-      <error statusCode="404" redirect="~/ThirdPartyEvents/NotFound"/>
+    <customErrors mode="On" defaultRedirect="~/ThirdPartyEvents/Error">
+      <error statusCode="404" redirect="~/ThirdPartyEvents/NotFound" />
     </customErrors>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
