--- a/src/TicketManagement.WebUI/TicketManagement.WebUI.csproj
+++ b/src/TicketManagement.WebUI/TicketManagement.WebUI.csproj
@@ -6,12 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <OpenApiReference Include="OpenAPIs\swagger.json" CodeGenerator="NSwagCSharp" ClassName="EventApiClient" Namespace="EventApiClientGenerated">
-      <SourceUri>https://localhost:5003/swagger/v1/swagger.json</SourceUri>
-    </OpenApiReference>
-  </ItemGroup>
-
-  <ItemGroup>
     <InternalsVisibleTo Include="TicketManagement.IntegrationTests" />
   </ItemGroup>
 
@@ -52,6 +46,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="OpenAPIs\" />
     <Folder Include="wwwroot\image\" />
   </ItemGroup>
 
