--- a/src/TicketManagement.EventManagementAPI/TicketManagement.EventManagementAPI.csproj
+++ b/src/TicketManagement.EventManagementAPI/TicketManagement.EventManagementAPI.csproj
@@ -23,7 +23,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NSwag.AspNetCore" Version="13.16.1" />
     <PackageReference Include="NSwag.MSBuild" Version="13.16.1">
       <PrivateAssets>all</PrivateAssets>
@@ -45,7 +44,7 @@
 
   <Target Name="GenerateNSwag" AfterTargets="Build" Condition="$(SkipSwagger) != 'true'">
     <Exec EnvironmentVariables="ASPNETCORE_ENVIRONMENT=Development;" Command="$(NSwagExe_Net60) aspnetcore2openapi /project:&quot;$(MSBuildProjectFullPath)&quot; /nobuild:true /output:&quot;../TicketManagement.WebUI/OpenAPIs/swagger.json&quot; /documentName:v1 /configuration:$(Configuration)" />
-    <Exec Command="$(NSwagExe_Net60) run EventManagementClient.nswag /variables:Configuration=$(Configuration),OutDir=Client,InputSwagger=../TicketManagement.WebUI/OpenAPIs/swagger.json" />
+    <Exec Command="$(NSwagExe_Net60) run EventManagementApiClient.nswag /variables:Configuration=$(Configuration),OutDir=Client,InputSwagger=../TicketManagement.WebUI/OpenAPIs/swagger.json" />
   </Target>
   
 </Project>
