--- a/src/TicketManagement.UserAPI/appsettings.Development.json
+++ b/src/TicketManagement.UserAPI/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=TicketManagement.Database;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
