--- a/src/TicketManagement.WebUI/appsettings.Development.json
+++ b/src/TicketManagement.WebUI/appsettings.Development.json
@@ -5,6 +5,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=TicketManagement.Database;Integrated Security=True"
   },
+  "JwtTokenSettings": {
+    "JwtIssuer": "MySecretIssuer",
+    "JwtAudience": "MySecretAudience",
+    "JwtSecretKey": "9r#cExiS3ivug_=r"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
