--- a/src/TicketManagement.WebUI/appsettings.json
+++ b/src/TicketManagement.WebUI/appsettings.json
@@ -12,6 +12,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "JwtTokenSettings": {
+    "JwtIssuer": "MySecretIssuer",
+    "JwtAudience": "MySecretAudience",
+    "JwtSecretKey": "9r#cExiS3ivug_=r"
+  },
   "AllowedHosts": "*",
   "UserApiAddress": "https://localhost:5004",
   "EventManagerApiAddress": "https://localhost:5003"
