Fixed relationship between EventManagementAPI and UsersAPI

--- a/src/TicketManagement.WebUI/appsettings.json
+++ b/src/TicketManagement.WebUI/appsettings.json
@@ -19,5 +19,5 @@
   },
   "AllowedHosts": "*",
   "UserApiAddress": "https://localhost:5004",
-  "EventManagerApiAddress": "https://localhost:5003"
+  "EventManagementApiAddress": "https://localhost:5003"
 }
