--- a/src/TicketManagement.EventManagementAPI/appsettings.Development.json
+++ b/src/TicketManagement.EventManagementAPI/appsettings.Development.json
@@ -4,9 +4,11 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "UserApiAddress": "https://localhost:5004/"
 }
