--- a/src/TicketManagement.UserAPI/appsettings.Development.json
+++ b/src/TicketManagement.UserAPI/appsettings.Development.json
@@ -8,5 +8,12 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "JwtTokenSettings": {
+    "JwtIssuer": "MySecretIssuer",
+    "JwtAudience": "MySecretAudience",
+    "JwtSecretKey": "9r#cExiS3ivug_=r"
+  },
+  "HostAddress": "https://localhost:5004/"
 }
