--- a/src/TicketManagement.WebUI/appsettings.Development.json
+++ b/src/TicketManagement.WebUI/appsettings.Development.json
@@ -12,7 +12,7 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft.AspNetCore": "Warning"
     }
   }
