Added CRUD for User Identity into UsersAPI, implemented SeriLog

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,6 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/src/TicketManagement.WebUI/Logging
+/src/TicketManagement.UserAPI/Logging
+/src/TicketManagement.EventManagementAPI/Logging
