--- a/src/TicketManagement.EventManagementAPI/appsettings.Development.json
+++ b/src/TicketManagement.EventManagementAPI/appsettings.Development.json
@@ -1,13 +1,9 @@
 {
+  "Logging": {
+    "FilePath": "Logging/log.txt"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=TicketManagement.Database;Integrated Security=True"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Trace",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
   },
   "AllowedHosts": "*",
   "UserApiAddress": "https://localhost:5004/"
