--- a/src/TicketManagement.WebUI/appsettings.Development.json
+++ b/src/TicketManagement.WebUI/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "Logging": {
+    "FilePath": "Logging/log.txt"
+  },
   "buildOptions": {
     "emitEntryPoint": true
   },
@@ -9,11 +12,5 @@
     "JwtIssuer": "MySecretIssuer",
     "JwtAudience": "MySecretAudience",
     "JwtSecretKey": "9r#cExiS3ivug_=r"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Trace",
-      "Microsoft.AspNetCore": "Warning"
-    }
   }
 }
