--- a/src/TicketManagement.EventManagementAPI/TicketManagement.EventManagementAPI.csproj
+++ b/src/TicketManagement.EventManagementAPI/TicketManagement.EventManagementAPI.csproj
@@ -13,6 +13,10 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <Compile Remove="Client\EventManagementApiClientGenerated.cs" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
     <PackageReference Include="Microsoft.Extensions.ApiDescription.Client" Version="6.0.8">
       <PrivateAssets>all</PrivateAssets>
@@ -38,5 +42,5 @@
       <IncludeAssets>none</IncludeAssets>
     </PackageReference>
   </ItemGroup>
-
+  
 </Project>
