--- a/src/TicketManagement.EventManagementAPI/TicketManagement.EventManagementAPI.csproj
+++ b/src/TicketManagement.EventManagementAPI/TicketManagement.EventManagementAPI.csproj
@@ -3,19 +3,15 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\net6.0\EventManagementApi.xml</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\net6.0\EventManagementApi.xml</DocumentationFile>
+    <AssemblyName>$(MSBuildProjectName)</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Client\EventManagementApiClientGenerated.cs" />
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>$(MSBuildProjectName.Trim("EventManagementAPI"))BusinessLogic.UnitTests</_Parameter1>
+    </AssemblyAttribute>
   </ItemGroup>
-
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
     <PackageReference Include="Microsoft.Extensions.ApiDescription.Client" Version="6.0.8">
