Added AllowCrossSiteAttribute to API project

--- a/src/TicketManagement.WebUI/appsettings.json
+++ b/src/TicketManagement.WebUI/appsettings.json
@@ -2,6 +2,7 @@
   "buildOptions": {
     "emitEntryPoint": true
   },
+  "UseReact":  true,
   "AllowedHosts": "*",
   "UserApiAddress": "https://localhost:5004",
   "EventManagementApiAddress": "https://localhost:5003"
