--- a/src/TicketManagement.WebUI/appsettings.Development.json
+++ b/src/TicketManagement.WebUI/appsettings.Development.json
@@ -2,7 +2,7 @@
   "Logging": {
     "FilePath": "Logging/log.txt"
   },
-  "UseReact": false,
+  "UseReact": true,
   "buildOptions": {
     "emitEntryPoint": true
   }
